# securedrive

./: .gitignore  CMakeLists.txt  README.md  authorization.c  authorization.h  learntime  learntime.c  main  main.c  test  ui_test.cpp
